--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
+    "mysql": "^2.18.1",
     "uuid": "^8.3.2"
   }
 }
